--- a/project-one.css
+++ b/project-one.css
@@ -1,20 +1,29 @@
-body {
-  background-color: coral;
-}
-body h1 {
-  font-family: "Langar", cursive;
-  color: black;
-  text-align: center;
+/*attached an outside font */
+@font-face {
+  font-family: 'Bob';
+  src: url('./bobs_burgers/Bob\'s\ Burgers.ttf');
 }
 
-#card-deck{
+body{
+  background-color: white;
+}
+body h1 {
+  font-family: "Bob", cursive;
+  color: red;
+  text-align: center;
+  font-size: 60px;
+  background-color: yellow;
+}
+
+#card-deck {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 100px);
+  grid-template-rows: repeat(3, 200px);
   width: 500px;
   margin: 0 auto;
   grid-gap: 10px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+  margin-bottom: 50px;
 }
 
 /* .card.turnOver {
@@ -23,19 +32,31 @@ body h1 {
 animate property to flip cards over*/
 
 .start-game {
-  background: rgb(87, 85, 85);
-  margin: 0 auto;
-  margin-bottom: 40px;
+  background: rgb(248, 21, 21);
+  margin: 0  auto;
+  margin-bottom: 20px;
   display: block;
+  border-radius: 15px;
+  padding: 10px;
+  color: white;
+  font-family: "Bob", cursive;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.start-game:hover {
+  background-color: black;
+  color: white;
 }
 
 .game-content {
-  color: black;
+  color: red;
   display: flex;
   justify-content: space-evenly;
-  font-size: 30px;
-  margin: 50px;
-  font-family: "Langar", cursive;
+  font-size: 40px;
+  margin: 25px;
+  font-family: "Bob", cursive;
+  background-color: yellow;
 
 }
 
@@ -49,4 +70,23 @@ animate property to flip cards over*/
 
 .card-front {
   display: none;
+}
+
+.game-over-message {
+  display: none;
+}
+
+.you-won-message {
+  display: none;
+}
+
+.reset {
+  display: block;
+  font-family: "Langar", cursive;
+  color: black;
+  text-align: center;
+}
+
+.the {
+  visibility: hidden;
 }
